refactor related work and modelling flow section

--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -64,6 +64,10 @@
 \usepgfplotslibrary{external}
 \tikzexternalize[prefix=experiments/]
 
+\usepackage{pifont}
+\usepackage{pbox}
+\usepackage{longtable}
+
 % Aktuelle Section und Untersection am Seitenkopf
 \usepackage{fancyhdr}
 
@@ -353,6 +357,7 @@ imperdiet a, venenatis vitae, justo.
 \bibliographystyle{abbrv}
 \bibliography{../literature}
 
+\newpage
 
 \begin{appendix}
 \input{sections/appendix}
