--- a/master_thesis/sections/appendix.tex
+++ b/master_thesis/sections/appendix.tex
@@ -65,6 +65,72 @@ Type & $\max{|E|}$ & Avg.$|e|$ & Med.$|e|$ & Avg.$d(v)$ & Med.$d(v)$ & Avg.$\fra
 \label{tbl:full_benchmark_set}
 \end{table}
 
+\subsection{Excluded Test Instances}
+\label{app:excludedinstances}
+
+{\footnotesize  
+\begin{longtable}{p{7cm}lllllll}                                                                                                                                                                                                                                                                           
+Hypergraph                                                                                                                      & 2           & 4                                         & 8                                         & 16                                        & 32                                        & 64                                                 & 128                                                \\
+\hline
+  10pipe-q0-k.dual                                                                                                            &             &                                           &                                           & $\triangle$                               & $\triangle$                               & $\triangle$                                        & \ding{109}$\triangle$                              \\
+  10pipe-q0-k.primal                                                                                                          & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  11pipe-k.dual                                                                                                               & $\triangle$ & \ding{109}$\triangle$                     & \ding{109}$\triangle$                     & \ding{109}$\triangle$                     & \ding{109}$\triangle$                     & \ding{109}$\triangle$                              & \ding{109}$\triangle$                              \\
+  11pipe-k                                                                                                                    &             &                                           &                                           & \ding{109}                                & \ding{109}                                & \ding{109}                                         & \ding{109}                                         \\
+  11pipe-k.primal                                                                                                             & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & \ding{109}$\square$                                \\
+  11pipe-q0-k.dual                                                                                                            &             &                                           &                                           &                                           & $\triangle$                               & \ding{109}$\triangle$                              & \ding{109}$\triangle$                              \\
+  11pipe-q0-k.primal                                                                                                          & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  9dlx-vliw-at-b-iq3.dual                                                                                                     &             &                                           &                                           &                                           &                                           &                                                    & $\triangle$                                        \\
+  9dlx-vliw-at-b-iq3.primal                                                                                                   & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  9vliw-m-9stages-iq3-C1-bug7.dual                                                                                            & $\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$          & \ding{108}\ding{109}$\triangle$          \\
+  9vliw-m-9stages-iq3-C1-bug7                                                                                                 & $\triangle$ & $\triangle$                               & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\square$$\triangle$ & \ding{108}\ding{109}$\square$$\triangle$ \\
+  9vliw-m-9stages-iq3-C1-bug7.primal                                                                                          & $\triangle$ & $\triangle$                               &                                           & $\triangle$                               & \ding{109}$\triangle$                     & \ding{109}$\triangle$                              & \ding{109}$\triangle$                              \\
+  9vliw-m-9stages-iq3-C1-bug8.dual                                                                                            & $\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$          & \ding{108}\ding{109}$\triangle$          \\
+  9vliw-m-9stages-iq3-C1-bug8                                                                                                 & $\triangle$ & $\triangle$                               & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\triangle$ & \ding{108}\ding{109}$\square$$\triangle$ & \ding{108}\ding{109}$\square$$\triangle$ \\
+  9vliw-m-9stages-iq3-C1-bug8.primal                                                                                          & $\triangle$ & $\triangle$                               &                                           & $\triangle$                               & \ding{109}$\triangle$                     & \ding{109}$\triangle$                              & \ding{109}$\triangle$                              \\
+  blocks-blocks-37-1.130-NOTKNOWN.dual                                                                                        &             & \ding{109}                                & \ding{108}\ding{109}            & \ding{108}\ding{109}            & \ding{108}\ding{109}            & \ding{108}\ding{109}                     & \ding{108}\ding{109}$\triangle$          \\
+  blocks-blocks-37-1.130-NOTKNOWN                                                                                             &             & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  blocks-blocks-37-1.130-NOTKNOWN.primal                                                                                      & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  E02F20.dual                                                                                                                 &             &                                           &                                           &                                           &                                           &                                                    & \ding{109}                                         \\
+  E02F22.dual                                                                                                                 &             &                                           &                                           &                                           &                                           & \ding{109}                                         & \ding{109}                                         \\
+  openstacks-p30-3.085-SAT.primal                                                                                             & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  openstacks-sequencedstrips-nonadl-nonnegated-os-sequencedstrips-p30-3.025-NOTKNOWN.primal                                   & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  openstacks-sequencedstrips-nonadl-nonnegated-os-sequencedstrips-p30-3.085-SAT.primal                                        & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  q-query-3-L100-coli.sat.dual                                                                                                &             &                                           &                                           &                                           &                                           &                                                    & $\triangle$                                        \\
+  q-query-3-L150-coli.sat.dual                                                                                                &             &                                           &                                           &                                           &                                           & $\triangle$                                        & $\triangle$                                        \\
+  q-query-3-L200-coli.sat.dual                                                                                                &             &                                           &                                           &                                           & $\triangle$                               & $\triangle$                                        & $\triangle$                                        \\
+  q-query-3-L80-coli.sat.dual                                                                                                 &             &                                           &                                           &                                           &                                           &                                                    & $\triangle$                                        \\
+  transport-transport-city-sequential-25nodes-1000size-3degree-100mindistance-3trucks-10packages-2008seed.030-NOTKNOWN.dual   &             &                                           &                                           &                                           &                                           &                                                    & $\triangle$                                        \\
+  transport-transport-city-sequential-25nodes-1000size-3degree-100mindistance-3trucks-10packages-2008seed.050-NOTKNOWN.primal & $\square$   &                                           &                                           & $\square$                                 &                                           &                                                    & $\square$                                          \\
+  velev-vliw-uns-2.0-uq5.dual                                                                                                 &             &                                           & $\triangle$                               & $\triangle$                               & $\triangle$                               & $\triangle$                                        & $\triangle$                                        \\
+  velev-vliw-uns-2.0-uq5.primal                                                                                               & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                          \\
+  velev-vliw-uns-4.0-9.dual                                                                                                   &             &                                           &                                           &                                           & $\triangle$                               & $\triangle$                                        & $\triangle$                                        \\
+  velev-vliw-uns-4.0-9.primal                                                                                                 & $\square$   & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                 & $\square$                                          & $\square$                                               \\
+\hline
+  192bit                                                                                                                      & $\square$   &                                           &                                           & $\square$                                 &                                           &                                                    &                                                    \\
+  appu                                                                                                                        &             &                                           &                                           &                                           &                                           & \ding{109}                                         & \ding{109}                                         \\
+  ESOC                                                                                                                        & $\square$   & $\square$                                 &                                           &                                           & $\square$                                 & \ding{109}$\square$                                & $\square$                                          \\
+  human-gene2                                                                                                                 &             &                                           &                                           &                                           & \ding{109}$\triangle$                     & \ding{109}$\triangle$                              & \ding{109}$\triangle$                              \\
+  IMDB                                                                                                                        &             &                                           &                                           & $\triangle$                               & $\triangle$                               & $\triangle$                                        & $\triangle$                                        \\
+  kron-g500-logn16                                                                                                            &             & $\triangle$                               & $\triangle$                               & $\triangle$                               & $\triangle$                               & \ding{109}$\triangle$                              & \ding{109}$\triangle$                              \\
+  Rucci1                                                                                                                      &             &                                           &                                           &                                           & $\square$                                 &                                                    &                                                    \\
+  sls                                                                                                                         & $\square$   & $\square$                                 & $\square$                                 & \ding{109}$\square$                       & \ding{109}$\square$                       & \ding{109}$\square$                                & \ding{109}$\square$                                \\
+  Trec14                                                                                                                      &             &                                           &                                           &                                           &                                           &                                                    & \ding{109}                                         
+\end{longtable}}
+\begin{table}[h!]
+\centering
+  \caption*{
+    \begin{tabular}{|l l|}
+      \hline
+      $\triangle$~:              & \KaHyPar{CA}/\KaHyPar{MF} exceeded time limit                                                                                                                                                                                                            \\
+      \ding{108}~:               & \hMetis{R} exceeded time limit                                                                                                                                                                                                           \\
+      \ding{109}~:               & \hMetis{K} exceeded time limit                                                                                                                                                                                                           \\
+      $\square$~:                & \PaToH{Q} memory allocation error                                                                                                                                                                                                        \\
+      \hline
+    \end{tabular}
+  }
+  \caption{Instances excluded from the full benchmark set evaluation.}~\label{tbl:excluded}  
+\end{table}
+
 \newpage
 \section{Detailed Flow Network and Algorithm Evaluation}
 \begin{table}[ht]
