--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -272,11 +272,9 @@ Variant & Avg.$[\%]$ & Min.$[\%]$ & $t_{\text{flow}}[s]$ & $t[s]$ \\
 \label{sec:final_comparison}
 
 Finally, we compare our new approach \KaHyPar{MF} with different state-of-the-art hypergraph
-partitioner on our full benchmark set.
-\begin{enumerate}
-\item describe which benchmarks are excluded
-\end{enumerate}
-
+partitioner on our full benchmark set. We excluded $194$ instances of $3416$ either because 
+\PaToH{Q} could not allocate enough memory or other partitioners did not finish in time. The
+excluded instances are shown in Table \ref{tbl:excluded}. \\
 \autoref{fig:final_flow}~summarizes the results of the experiment. \KaHyPar{MF}
 produced on $\approx 70\%$ of all benchmark instances the best partition. It is followed by
 \hMetis{R} ($14\%$), \hMetis{K} ($11\%$), \KaHyPar{CA} ($2.5\%$),
